# NeuroCompass

./: .clang-format  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  test_results.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  test_run.yml
docs/: GUIDE_EN.md  GUIDE_ZH.md
examples/: advanced_validation_example.cpp  basic_registration_example.cpp  batch_processing_example.cpp  bet_lite_example.cpp  error_recovery_example.cpp  mcflirt_lite_example.cpp  simple_error_recovery.cpp
scripts/: download_test_data.py  download_test_data.sh
src/: CMakeLists.txt
src/bet_lite/: BrainExtractor.cpp  BrainExtractor.h  BrainExtractorLite.cpp  BrainExtractorLite.h  CMakeLists.txt  ValidationMetrics.cpp  ValidationMetrics.h  main.cpp
src/flirt_lite/: AffineTransform.cpp  AffineTransform.h  CMakeLists.txt  ErrorRecovery.h  FlirtRegistration.cpp  FlirtRegistration.h  MemoryPool.cpp  MultiResolutionPyramid.cpp  MultiResolutionPyramid.h  NeuroCompassExceptions.h  OptimizedPowellOptimizer.h  OptimizedPyramid.h  OptimizedSimilarityMetrics.cpp  OptimizedSimilarityMetrics.h  PerformanceProfiler.cpp  PerformanceProfiler.h  PowellOptimizer.cpp  PowellOptimizer.h  SIMDOptimizations.cpp  SimilarityMetrics.cpp  SimilarityMetrics.h  ThreadPool.cpp
src/io/: CMakeLists.txt  CompatUtils.h  Image3D.cpp  ImageIO.h  ImageReader.cpp  ImageUtils.cpp  ImageWriter.cpp
src/mcflirt_lite/: BatchMCFLIRT.cpp  CMakeLists.txt  MCFLIRTLite.cpp  MCFLIRTLite.h  MotionQualityAssessment.cpp
src/standalone/: CMakeLists.txt  StandaloneMCFLIRT.cpp  StandaloneMCFLIRT.h  main.cpp
src/validation/: CMakeLists.txt  RegistrationValidator.cpp  RegistrationValidator.h  ValidationUtils.cpp  ValidationUtils.h
tests/: CMakeLists.txt  CMakeLists_basic.txt  basic_functionality_tests.cpp  compilation_test.cpp  main_test_runner.cpp  minimal_tests.cpp  run_basic_tests.sh  run_tests.sh  simple_basic_tests.cpp  simple_performance_test.cpp  syntax_test  syntax_test.cpp  test_advanced_similarity_metrics.cpp  test_affine_transform.cpp  test_bet_lite.cpp  test_error_handling.cpp  test_image_io.cpp  test_integration.cpp  test_mcflirt_lite.cpp  test_multiresolution_pyramid.cpp  test_performance_optimization.cpp  test_performance_optimizations.cpp  test_powell_optimizer.cpp  test_registration_validator.cpp  test_resource_management.cpp  test_similarity_metrics.cpp
